--- a/src/main/resources/templates/order.html
+++ b/src/main/resources/templates/order.html
@@ -11,8 +11,8 @@
 <body>
     <h2>Order List</h2>
     <br><br>
-    <div class="container" th:if="${orderList.size() > 0}">
-        <table class="table table-hover table-responsive-md">
+    <div class="container" th:unless="${orderList==null}">
+        <table th:if="${orderList.size()>0}" class="table table-hover table-responsive-md">
             <thead>
                 <tr>
                     <th>Order ID</th>
@@ -32,6 +32,10 @@
                 </tr>
             </tbody>
         </table>
+    </div>
+    <div class="container" th:if="${orderList==null}">
+        No order ID:  <span data-th-text="${orderId}"></span> found.
+    </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body> 
